syntax = "proto3";

package services;

import "google/api/annotations.proto";
import "types/witness.proto";
import "google/protobuf/empty.proto";
import "types/btctx.proto";

option go_package = "github.com/iotexproject/ioTube/witness-service/grpc/services";

service RelayService {
    rpc Submit(types.Witness) returns (WitnessSubmissionResponse) {
        option (google.api.http) = {
            post: "/submit"
            body: "*"
        };
    };
    rpc Reset(ResetTransferRequest) returns (ResetTransferResponse) {
        option (google.api.http) = {
            post: "/reset"
            body: "*"
        };
    };
    rpc Check(CheckRequest) returns (CheckResponse) {
        option (google.api.http) = {
            post: "/check"
            body: "*"
        };
    };
    rpc List(ListRequest) returns (ListResponse) {
        option (google.api.http) = {
            post: "/list"
            body: "*"
        };
    };

    // rpcs below are BTC validation related
    rpc ListUnsignedBTCTXWithoutNonces(ExcludedTransactions)  returns (ListUnsignedBTCTXWithoutNoncesResponse);

    rpc SubmitMusigNonces(MusigNonceMessage) returns (google.protobuf.Empty);

    rpc ListUnsignedBTCTXWithNonces(ExcludedTransactions)  returns (ListUnsignedBTCTXWithNoncesResponse);
     
    rpc SubmitMusigSignatures(MusigSignatureMessage) returns (google.protobuf.Empty);
}

message CheckRequest {
    bytes id = 1;
}

enum Status {
    UNKNOWN = 0;
    CREATED = 1;
    SUBMITTED = 2;
    SETTLED = 3;
    FAILED = 4;
    CONFIRMING = 5;
}

message CheckResponse {
    bytes key = 1;
    repeated bytes witnesses = 2;
    bytes txHash = 3;
    Status status = 4;
}

message ListRequest {
	int32 first = 1;
	int32 skip = 2;
	bytes token = 3;
	bytes sender = 4;
	bytes recipient = 5;
	Status status = 6;
}

message ListResponse {
	repeated types.Transfer transfers = 1;
	repeated CheckResponse statuses = 2;
	uint32 count = 3;
}

message ResetTransferRequest {
    bytes id = 1;
}

message ResetTransferResponse {
    bool success = 1;
}

message WitnessSubmissionResponse {
    bytes id = 1;
    bool success = 2;
}

message ExcludedTransactions {
    repeated string tx_hash = 1;
}

message ListUnsignedBTCTXWithoutNoncesResponse {
    repeated types.BTCTransaction transactions = 1;
}

message MusigNonceMessage {
    MusigNonces message = 1;
    bytes pubkey = 2;
    bytes signature = 3; // to validate the identity of the sender
}

message MusigNonces {
    repeated types.TransactionNonces nonces = 1;
}

message ListUnsignedBTCTXWithNoncesResponse {
    repeated bytes pubkeys = 1;
    repeated types.TransactionWithCombinedNonces transactions = 2;
}

message MusigSignatureMessage {
    MusigSignatures message = 1;
    bytes pubkey = 2;
    bytes signature = 3; // to validate the identity of the sender
}


message MusigSignatures {
    repeated types.TransactionSignatures signatures = 1;
}
